name:                kashmir
version:             0.2.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/krisajenkins/kashmir
license:             BSD3
license-file:        LICENSE.txt
author:              Kris Jenkins
maintainer:          krisajenkins@gmail.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Kashmir.Database.Postgresql, Kashmir.UUID, Kashmir.ETL, Kashmir.ETL.Download, Kashmir.ETL.Pipes, Kashmir.ETL.Unfold, Kashmir.Aeson, Kashmir.Snap.Snaplet.Postgresql, Kashmir.Snap.Snaplet.Random, Kashmir.Web
  default-extensions: OverloadedStrings
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , binary
                     , bytestring
                     , esqueleto >= 2.2.11 && < 3.0
                     , lens
                     , lifted-base >= 0.2.3.1
                     , monad-logger
                     , mtl
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , path-pieces
                     , pipes
                     , pipes-binary
                     , pipes-bytestring
                     , pipes-parse
                     , postgresql-simple
                     , random
                     , snap >= 0.13 && < 0.15
                     , snap-core >= 0.9 && < 1
                     , text
                     , time >= 1.4.2
                     , transformers >= 0.3.0.0
                     , uuid
                     , wreq
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/krisajenkins/kashmir.git
