name:                kashmir
version:             0.2.2.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/krisajenkins/kashmir
license:             BSD3
license-file:        LICENSE.txt
author:              Kris Jenkins
maintainer:          krisajenkins@gmail.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Kashmir.Aeson, Kashmir.Database.Postgresql, Kashmir.ETL.Download, Kashmir.ETL.Pipes, Kashmir.ETL.Unfold, Kashmir.ETL, Kashmir.Github.Api, Kashmir.Github.Types, Kashmir.Github, Kashmir.Snap.Snaplet.Authentication.Config, Kashmir.Snap.Snaplet.Authentication.Schema, Kashmir.Snap.Snaplet.Authentication, Kashmir.Snap.Snaplet.Postgresql, Kashmir.Snap.Snaplet.Random, Kashmir.UUID, Kashmir.Web

  default-extensions:
  build-depends:       aeson
                     , aeson-casing
                     , base >= 4.7 && < 5
                     , binary
                     , MonadCatchIO-transformers >= 0.3.1.3
                     , bcrypt
                     , bytestring
                     , http-api-data
                     , esqueleto >= 2.2.11 && < 3.0
                     , lens
                     , lifted-base >= 0.2.3.1
                     , monad-logger
                     , mtl
                     , bcrypt
                     , stm
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , path-pieces
                     , pipes
                     , pipes-binary
                     , pipes-bytestring
                     , pipes-parse
                     , postgresql-simple
                     , random
                     , snap >= 0.13 && < 0.15
                     , snap-core >= 0.9 && < 1
                     , text
                     , time >= 1.4.2
                     , transformers >= 0.3.0.0
                     , containers
                     , directory >= 1.2.2.0
                     , uuid
                     , jwt
                     , yaml
                     , wreq
  default-language:    Haskell2010
  default-extensions:

source-repository head
  type:     git
  location: https://github.com/krisajenkins/kashmir.git
