name:                kashmir
version:             0.2.2.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/krisajenkins/kashmir
license:             BSD3
license-file:        LICENSE.txt
author:              Kris Jenkins
maintainer:          krisajenkins@gmail.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Kashmir.Aeson
                     , Kashmir.Database.Postgresql
                     , Kashmir.ETL
                     , Kashmir.ETL.Download
                     , Kashmir.ETL.Pipes
                     , Kashmir.Email
                     , Kashmir.Github
                     , Kashmir.Github.Api
                     , Kashmir.Github.Types
                     , Kashmir.Github.Types.Common
                     , Kashmir.Github.Types.Hook
                     , Kashmir.Github.Types.Organization
                     , Kashmir.Github.Types.Repository
                     , Kashmir.Github.Types.RepositoryHook
                     , Kashmir.Github.Types.User
                     , Kashmir.Snap.Snaplet.Postgresql
                     , Kashmir.Snap.Snaplet.Random
                     , Kashmir.Snap.Utils
                     , Kashmir.UUID
                     , Kashmir.Unfold
                     , Kashmir.Web

  default-extensions:
  build-depends:       MonadCatchIO-transformers >= 0.3.1.3
                     , aeson
                     , aeson-casing
                     , base >= 4.7 && < 5
                     , bcrypt
                     , bcrypt
                     , binary
                     , boomerang
                     , bytestring
                     , cases
                     , containers
                     , directory >= 1.2.2.0
                     , esqueleto >= 2.2.11 && < 3.0
                     , http-api-data
                     , jwt
                     , lens
                     , lifted-base >= 0.2.3.1
                     , monad-logger
                     , mtl
                     , path-pieces
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , pipes
                     , pipes-binary
                     , pipes-bytestring
                     , pipes-parse
                     , postgresql-simple
                     , random
                     , snap >= 0.13 && < 0.15
                     , snap-core >= 0.9 && < 1
                     , snap-cors
                     , stm
                     , text
                     , time >= 1.4.2
                     , transformers >= 0.3.0.0
                     , uuid
                     , web-routes
                     , web-routes-boomerang
                     , wreq
                     , yaml
  default-language:    Haskell2010
  default-extensions:

test-suite kashmir-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       GithubSpec
  build-depends:       QuickCheck
                     , aeson
                     , base
                     , errors
                     , hspec
                     , hspec-core
                     , kashmir
                     , lens
                     , parsec
                     , mtl
                     , containers
                     , quickcheck-instances
                     , text
                     , yaml
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/krisajenkins/kashmir.git
